--- a/src/app/products/checkoutscreen/checkoutscreen.component.html
+++ b/src/app/products/checkoutscreen/checkoutscreen.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="productJson.length ==0" class="mt-10">
   <div class="alert alert-primary" role="alert">
-    No Products are Avalible
+    No Products are Available
   </div>
 </div>
 
@@ -92,7 +92,7 @@
                     {{shippingAddress.street_address}}<br/>
                     {{shippingAddress.city}}, {{shippingAddress.state}}, {{shippingAddress.zip}}
                   </address>
-
+                  <span  class="trangleSelectedItem" *ngIf="selectedtab1==i"></span>
                 </mat-card>
               </div>
             </div>
@@ -115,7 +115,7 @@
                           {{billingAddress.street_address}}<br/>
                           {{billingAddress.city}}, {{billingAddress.state}}, {{billingAddress.zip}}
                         </address>
-      
+                        <span  class="trangleSelectedItem" *ngIf="selectedtab2==i"></span>
                       </mat-card>
                     </div>
                   </div>
@@ -168,7 +168,8 @@
                 </tr>
                 <tr class="btn-table">
                   <td rowspan="2">
-                    <button type="button" class="btn btn-primary" (click)="getNavigationMethod(selectedTab)">Next</button>
+                    <button *ngIf="isActive && !placeOrder" type="button" class="btn btn-primary" (click)="getNavigationMethod(selectedTab)">Next</button>
+                    <button *ngIf="isActive && placeOrder" type="button" class="btn btn-primary" (click)="getNavigationMethod(selectedTab)">Place Order</button>
                   </td>
                 </tr>
               </tbody>
