--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,75 +1,168 @@
-<div style="display:grid; grid-template-columns: 1fr 150px; grid-gap: 10px;">
-  <div style="justify-self: end; align-self: center">
-    <!-- <button
-      id="btnSearch"
-      mat-flat-button
-      (click)="getRules(ruleType, searchText)"
-      matTooltip="Search rules"
-      matTooltipPosition="above"
-      class="action-button"
-    > -->
-      <!-- <mat-icon class="mat-icon-action">search -coppy</mat-icon>Search -->
-    <!-- </button> -->
+<div class="pt-2" style="width:80%;margin:0 auto">
+    <div class="col-md-12">
+      <mat-card style="border-radius:15px !important">
+        <div class="row">
+          <div>
+            <img src="./assets/images/iorder_header.png" width="30" />
+          </div>
+          <div style="float: right;width: 80%">
+            <div class="pl-1">
+              <b> Care and Cure Pharmacy</b>
+            </div>
+            <div class="pl-1">Mr.Jhon</div>
+          </div>
+        </div>
+      </mat-card>
+    </div>
+    <div class="mt-3">
+      <div class="col-md-12 row">
+        <div class="col-md-3">
+          <h6>Orders Preview</h6>
+        </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <h6>
+            Promotions
+          </h6>
+        </div>
+      </div>
+      <div class="row col-md-12">
+        <div class="col-md-3">
+          <mat-card style="height: 182px;border-radius: 15px">
+            <div style="text-align: center" class="p-2">
+              <div><b>Number of Orders</b></div>
+              <div style="font-size:30px;color: #26a69a" class="pt-3">
+                56
+              </div>
+            </div>
+          </mat-card>
+        </div>
+        <div class="col-md-3">
+          <mat-card style="height: 182px;border-radius: 15px">
+            <div style="text-align: center;padding: 10px" class="p-2">
+              <div><b>Pending Orders</b></div>
+              <div style="font-size: 30px;color: #26a69a" class="pt-3">
+                1
+              </div>
+              <div class="pt-3" style="font-size:12px;color: #26a69a">
+                Call Wholesaler
+              </div>
+              <span class="call pr-2">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+              </span>
+            </div>
+          </mat-card>
+        </div>
+        <div class="col-md-6">
+          <mat-card style="height: 182px;border-radius: 15px">
+            <ngb-carousel *ngIf="images">
+              <ng-template ngbSlide>
+                <img [src]="images[0]" class="imageSize" />
+                <div class="carousel-caption">
+                  test
+                </div>
+              </ng-template>
+              <ng-template ngbSlide>
+                <img [src]="images[1]" class="imageSize" />
+                <div class="carousel-caption">
+                  test1
+                </div>
+              </ng-template>
+              <ng-template ngbSlide>
+                <img [src]="images[2]" class="imageSize" />
+                <div class="carousel-caption">
+                  test2
+                </div>
+              </ng-template>
+            </ngb-carousel>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+    <div class="mt-3">
+      <div class="col-md-12 row">
+        <div class="col-md-6" style="text-align: center">
+          <mat-card style="height: 196px;border-radius: 15px">
+            <div style="font-size: 12px">
+              Total Purchase Value
+            </div>
+            <div style="font-size: 40px;color:blue">
+              $552,035
+            </div>
+            <div class="btn-group purchaseBtn" role="group">
+              <button type="button" class="btn btn-primary">Year</button>
+              <button  type="button" class="btn btn-primary">Quater</button>
+              <button  type="button" class="btn btn-primary">Month</button>
+              <button  type="button" class="btn btn-primary">Recent</button>
+            </div>
+          </mat-card>
+        </div>
+        <div class="col-md-3 pr-2" *ngFor="let o of orderData; let idx = index">
+          <h6><span [hidden]="idx != 0">Recent Orders</span></h6>
+          <mat-card
+            class="p-0"
+            style="border-radius:15px"
+            [ngClass]="{ 'mt-4': idx === 1 }"
+          >
+            <div
+              class="order"
+              [ngClass]="
+                o.status === 'shipped'
+                  ? 'ship'
+                  : o.status === 'Delivered'
+                  ? 'del'
+                  : ''
+              "
+            >
+              Order# {{ o.orderID }}
+            </div>
+            <div
+              class="date"
+              [ngClass]="
+                o.status === 'shipped'
+                  ? 'ship'
+                  : o.status === 'Delivered'
+                  ? 'del'
+                  : ''
+              "
+            >
+              {{ o.date }}
+            </div>
+            <div class="row col-md-12 pr-0 pt-2">
+              <div class="col-md-6 pr-0">
+                <div style="font-size: 12px">Order Value</div>
+                <div style="color: blue">{{ o.Orderval }}</div>
+              </div>
+              <div class="col-md-6 pr-0">
+                <div style="font-size: 12px">No of Orders</div>
+                <div style="color: springgreen">{{ o.orders }}</div>
+              </div>
+            </div>
+            <div style="font-size: 12px;text-align: center">
+              <div class="pb-2">
+                Status:
+                <span  [ngClass]="
+                o.status === 'shipped'
+                  ? 'shipCol'
+                  : o.status === 'Delivered'
+                  ? 'delCol'
+                  : ''
+              ">{{o.status}}</span>
+              <span *ngIf="o.status === shipped">
+                <i class="fa fa-map-marker pl-1"></i>
+              </span>
+              </div>
+              <button class="btn mb-2" style="font-size: 12px;border-radius: 10px;padding: 5px"
+              [ngClass]="
+                o.status === 'shipped'
+                  ? 'ship'
+                  : o.status === 'Delivered'
+                  ? 'del'
+                  : ''"
+              >Repeat Order</button>
+            </div>
+          </mat-card>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<div
-  *ngIf="rulesArrList && rulesArrList.length == 0 && searchText !== ''"
-  fxLayoutAlign="center center"
-  class="error-message"
->
-  <b>No rules found matching the search text </b>
-</div>
-
-<div>
-  <mat-nav-list color="primary">
-    <mat-list-item
-      *ngFor="
-        let rule of (rulesArrList
-          | paginate: { itemsPerPage: 20, currentPage: p })
-      "
-      class="rules-bar"
-      color="primary"
-      (click)="loadRuleDetails(ruleType, rule)"
-      style="margin-bottom: 2px"
-    >
-      <mat-icon mat-list-icon>group_work</mat-icon>
-      <h1 mat-line>
-        <span
-          class="nobreak"
-          style="overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;"
-          >{{ rule.ruleName }}</span
-        >
-      </h1>
-      <p mat-line class="demo-2">
-        <span
-          class="nobreak"
-          style="overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;"
-          >{{ rule.ruleDescription }}</span
-        >
-      </p>
-      <button mat-icon-button (click)="openDeleteRuleDialog($event, rule)">
-        <mat-icon class="mat-menu-icon">delete</mat-icon>
-      </button>
-    </mat-list-item>
-  </mat-nav-list>
-
-  <!-- To display the loader image -->
-  <div
-    class="example-loading-shade"
-    fxLayoutAlign="center center"
-    *ngIf="!rulesArrList && rulesArrList.length < 1"
-  >
-    <span> <mat-spinner layout-align="center"></mat-spinner> </span>
-  </div>
-  <!--  End  -->
-
-  <!--For pagination-->
-  <span style="text-align: right">
-    <pagination-controls (pageChange)="p = $event"></pagination-controls>
-  </span>
-  <!-- <span style="text-align: right">  <pagination-controls (pageChange)="p = $event"></pagination-controls></span>-->
-</div>
