--- a/src/app/products/orders/orders.component.html
+++ b/src/app/products/orders/orders.component.html
@@ -12,11 +12,11 @@ width: 65%;">
 <div class="sample"style="z-index: 10;">
     <div class="borderTop" style="background-color: #fff">
 
-      <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='allorders'}" (click)="selectedTab='allorders'">
+      <span class="ml-3 mr-4 cursor" [ngClass]="{active:selectedTab=='allorders'}" (click)="selectedTab='allorders'">
         All Orders
       </span>
-      <span class="ml-3 mr-4" [ngClass]="{active:selectedTab=='Promotions'}" (click)="selectedTab='Promotions'">
-          Pendingorders
+      <span class="ml-3 mr-4 cursor" [ngClass]="{active:selectedTab=='Promotions'}" (click)="selectedTab='Promotions'">
+          Pending Orders
         </span>
       </div>
 
