--- a/src/app/products/product-list/product-list.component.scss
+++ b/src/app/products/product-list/product-list.component.scss
@@ -25,7 +25,7 @@ table {
 
 }
 
-.a1{
+.productListSubHeader{
 background-color: #fff;
 border: 1px solid transparent;
 width: 85%;
@@ -33,6 +33,7 @@ text-align: center;
 margin: 0 auto;
 border-radius: 25px;
 margin-top: 19px;
+background-color: #fff
 }
 
 .leftTrangle {
