--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 					
 					<router-outlet>
 						</router-outlet>
-						<app-spinner></app-spinner>
+						<!-- <app-spinner></app-spinner> -->
 			</div>
 			
 				
