--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 @import '~ngx-toastr/toastr.css';
+@import "../node_modules/@syncfusion/ej2-base/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-angular-navigations/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-inputs/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-buttons/styles/material.css";
 
 html,body{height: 100%;}
 body{margin: 0;}
@@ -7,6 +11,8 @@ body{margin: 0;}
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
     border-bottom: 1px solid rgba(0, 0, 0, 0.14) !important;
 }
+
+
 
 .mat-tab-label-container {
     align-items: center !important;
